@@ -1,5 +1,6 @@
 2008-11-25  Michal Ludvig  <michal@logix.cz>
 
+	* upload-to-sf.sh: Helper script.
 	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre2+svn
 
 2008-11-24  Michal Ludvig  <michal@logix.cz>
